--- a/Đồ án/index.html
+++ b/Đồ án/index.html
@@ -328,7 +328,7 @@
                 <hr class="hr">
                 <div ><a class="hoverk1">&#10004 Chính sách vận chuyển và giao hàng</a></div>
                 <hr class="hr">
-                <div ><a class="hoverk1">&#10004 Chính sửa</a></div>
+                <div ><a class="hoverk1">&#10004 Chỉnh sửa</a></div>
                 <hr class="hr">
                 <div ><a class="hoverk1">&#10004 Chính sách Bảo vệ thông tin cá nhân</a></div>
             </div>
