--- a/Đồ án/index.html
+++ b/Đồ án/index.html
@@ -5,12 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trang web bán máy ảnh</title>
     <link rel="stylesheet" href="css.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
+    <div class="sdtdc">
+        <div class="sdt">
+            <i class='bx bxs-phone icon'></i><p class="sdt1"> 090 986 09 10 </p>
+           <p class="gach">|</p>
+        </div>
+        <div class="dc">
+            <i class='bx bxs-envelope icon'></i><p class="sdt1"> 1025/27A Cách Mạng Tháng Tám, Phường 7, Tân Bình, Hồ Chí Minh</p>
+        </div>
+    </div>
     <header>
 
-        <div>
+        <div class="logo">
             <img src="logo-mayanhxachtay-2020.jpg" alt="logo">
+        </div>
+        <div class="search">
+            <input placeholder="Tìm kiếm..."/>
+            <button class="nuttimkiem"><i class='bx bx-search'></i></button>
         </div>
         
     </header>
@@ -295,6 +309,92 @@
                     </div>
                     <div class="money">
                         <p ><b>18.000.000đ - 20.000.000đ</b></p>
+                    </div>
+                    <button class="button">Đặt hàng</button>
+                </div>
+            </div>
+
+        <!--DSLR Nikon-->    
+        
+        <div class ='nikon'>
+            <div class="ten">
+                <h1 >DSLR Nikon</h1>
+            </div>
+            <div class="khunganh">
+                <div class="khunganh1">
+                    <div class ="fu">
+                        <img src="n1.jpeg" alt="ni1" class="imageChange2">
+                    </div>
+                    <div class="thongtin">
+                        <p>Máy ảnh DSLR Nikon D6 (Body – Đẹp)</p>
+                    </div>
+                    <div class="money">
+                        <p ><b>72.990.000đ - 75.990.000đ</b></p>
+                    </div>
+                    <button class="button">Đặt hàng</button>
+                </div>
+                <!--khung2-->
+                <div class="khunganh1">
+                    <div class ="fu">
+                        <img src="n2.jpeg" alt="ni2" class="imageChange2">
+                    </div>
+                    <div class="thongtin">
+                        <p>Máy ảnh Nikon D600 Cũ Giá Tốt</p>
+                    </div>
+                    <div class="money">
+                        <p ><b>5.000.000đ - 7.000.000đ</b></p>
+                    </div>
+                    <button class="button">Đặt hàng</button>
+                </div>
+                <!--khung3-->
+                <div class="khunganh1">
+                    <div class ="fu">
+                        <img src="n3.jpeg" alt="ni3" class="imageChange2">
+                    </div>
+                    <div class="thongtin">
+                        <p>Máy ảnh Nikon Z9 Mới Giá Tốt</p>
+                    </div>
+                    <div class="money">
+                        <p ><b>94.500.000đ -108.500.000đ</b></p>
+                    </div>
+                    <button class="button">Đặt hàng</button>
+                </div>
+                <!--khung4-->
+                <div class="khunganh1">
+                    <div class ="fu">
+                        <img src="n4.jpg" alt="ni4" class="imageChange2">
+                    </div>
+                    <div class="thongtin">
+                        <p>MÁY ẢNH NIKON D5 HÀNG CŨ</p>
+                    </div>
+                    <div class="money">
+                        <p ><b>31.000.000đ - 54.000.000đ</b></p>
+                    </div>
+                    <button class="button">Đặt hàng</button>
+                </div>
+                <!--khung5-->
+                <div class="khunganh1">
+                    <div class ="fu">
+                        <img src="n5.jpg" alt="ni5" class="imageChange2">
+                    </div>
+                    <div class="thongtin">
+                        <p>MÁY ẢNH KỸ THUẬT SỐ NIKON DSLR D780</p>
+                    </div>
+                    <div class="money">
+                        <p ><b>28.000.000đ - 35.000.000đ</b></p>
+                    </div>
+                    <button class="button">Đặt hàng</button>
+                </div>
+                <!--khung6-->
+                <div class="khunganh1">
+                    <div class ="fu">
+                        <img src="n6.jpg" alt="ni6" class="imageChange2">
+                    </div>
+                    <div class="thongtin">
+                        <p>MÁY ẢNH DSLR NIKON D2X HÀNG CŨ</p>
+                    </div>
+                    <div class="money">
+                        <p ><b>2.500.000đ - 5.000.000đ</b></p>
                     </div>
                     <button class="button">Đặt hàng</button>
                 </div>
