--- a/Đồ án/index.html
+++ b/Đồ án/index.html
@@ -5,22 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trang web bán máy ảnh</title>
     <link rel="stylesheet" href="css.css">
+    <link rel="stylesheet" href="index.js">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
     <div class="sdtdc">
         <div class="sdt">
-            <i class='bx bxs-phone icon'></i><p class="sdt1"> 090 986 09 10 </p>
+            <i class='bx bxs-phone icon'></i><p class="sdt1"> 012 345 67 89 </p>
            <p class="gach">|</p>
         </div>
         <div class="dc">
-            <i class='bx bxs-envelope icon'></i><p class="sdt1"> 1025/27A Cách Mạng Tháng Tám, Phường 7, Tân Bình, Hồ Chí Minh</p>
+            <i class='bx bxs-envelope icon'></i><p class="sdt1"> 1025/27A Đường abcxyz, Phường 7, Gò Vấp, Hồ Chí Minh</p>
         </div>
     </div>
     <header>
 
         <div class="logo">
-            <img src="logo-mayanhxachtay-2020.jpg" alt="logo">
+            <img src="Presentation1.png" alt="logo" class="logo1">
         </div>
         <div class="search">
             <input placeholder="Tìm kiếm..."/>
@@ -31,33 +32,60 @@
     <class class="uudai">
         <div class="img">
             <div>
-                <img src="Cam-Ket-Hoan-Tien.png" alt="anh1" class="imageChange"/>
+                <img src=".//baner/Cam-Ket-Hoan-Tien.png" alt="anh1" class="imageChange"/>
             </div>
             <div>
-                <img src="thanh-toan-linh-hoat.png" alt="anh2" class="imageChange"/>
+                <img src=".//baner/thanh-toan-linh-hoat.png" alt="anh2" class="imageChange"/>
             </div>
             <div>
-                <img src="Thu-Cu-Doi-Moi.png" alt="anh3" class="imageChange"/>
+                <img src=".//baner/Thu-Cu-Doi-Moi.png" alt="anh3" class="imageChange"/>
             </div>
         </div>
     </class>
     <hr style="margin-top: 20px; margin-left: 130px;margin-right: 130px;;width: 1250px;color:#e5e5e5;opacity: 0.3;">
     <main>  
         <div class="nd">
-            <div class="tab"><b><a>TRANG CHỦ</a></b></div>
-            <div class="tab"><b><a>DSRL</a></b></div>
-            <div class="tab"><b><a>MRRORLESS</a></b></div>
-            <div class="tab"><b><a>MÁY ẢNH KHÁC</a></b></div>
-            <div class="tab"><b><a>ÔNG KÍNH</a></b></div>
-            <div class="tab"><b><a>MÁY QUAY FILM</a></b></div>
-            <div class="tab"><b><a>MÁY ẢNH FILM</a></b></div>
-            <div class="tab"><b><a>PHỤ KIỆN</a></b></div>
-            <div class="tab"><b><a>KIẾN THỨC</a></b></div>
-            <div class="tab"><b><a>LIÊN HỆ</a> </b></div>
+            <div class="tab">
+                <a class="font-bold">TRANG CHỦ</a>
+            </div>
+            <div class="tab">
+                <a class="font-bold">DSRL</a>
+                <ul class="sub-menu">                   
+                        <li><a href="#" class="font">DSLR Canon</a></li>
+                        <li><a href="#" class="font">DSLR Nikon</a></li>
+                     
+                </ul>
+            </div>
+            <div class="tab">
+                <a class="font-bold">MRRORLESS</a>
+                <ul class="sub-menu1">                   
+                    <li><a href="#" class="font">Mirrorless Sony</a></li>
+                    <li><a href="#" class="font">Mirrorless Canon</a></li>
+                    <li><a href="#" class="font">Mirrorless Nikon</a></li> 
+                    <li><a href="#" class="font">Mirrorless Fujifilm</a></li> 
+                </ul>
+            </div>
+            <div class="tab">
+                <a class="font-bold">MÁY ẢNH KHÁC</a>
+            </div>
+            <div class="tab">
+                <a class="font-bold">ÔNG KÍNH</a>
+                <ul class="sub-menu2">                   
+                    <li><a href="#" class="font">Ống kính Sony</a></li>
+                    <li><a href="#" class="font">Ống kính Canon</a></li>
+                    <li><a href="#" class="font">Ống kính Nikon</a></li> 
+                    <li><a href="#" class="font">Ống kính Fujifilm</a></li> 
+                </ul>
+            </div>
+            <div class="tab"><a class="font-bold">MÁY QUAY FILM</a></div>
+            <div class="tab"><a class="font-bold">MÁY ẢNH FILM</a></div>
+            <div class="tab"><a class="font-bold">PHỤ KIỆN</a></div>
+            <div class="tab"><a class="font-bold">KIẾN THỨC</a></div>
+            <div class="tab"><a class="font-bold">LIÊN HỆ</a></div>
         </div>    
     </main>
     <div class="hinhdong">
-        <img src="h1.jpg" alt="hinh1" class="imageChange1"/>
+        <img src=".//baner/h1.jpg" alt="hinh1" class="imageChange1"/>
     </div>
     <footer>
         <div class ='fujifilm'>
@@ -67,7 +95,7 @@
             <div class="khunganh">
                 <div class="khunganh1">
                     <div class ="fu">
-                        <img src="fu1.jpeg" alt="fu1" class="imageChange2">
+                        <img src="./fujifilm/fu1.jpeg" alt="fu1" class="imageChange2">
                     </div>
                     <div class="thongtin">
                         <p>Máy ảnh Fujifilm XS20 Body(MỚI - CHÍNH HẢNG)</p>
@@ -80,7 +108,7 @@
                 <!--khung2-->
                 <div class="khunganh1">
                     <div class ="fu">
-                        <img src="fu2.jpeg" alt="fu2" class="imageChange2">
+                        <img src=".//fujifilm/fu2.jpeg" alt="fu2" class="imageChange2">
                     </div>
                     <div class="thongtin">
                         <p>Máy ảnh Fujifilm GFX 50S MarkII</p>
@@ -93,7 +121,7 @@
                 <!--khung3-->
                 <div class="khunganh1">
                     <div class ="fu">
-                        <img src="fu3.jpeg" alt="fu3" class="imageChange2">
+                        <img src=".//fujifilm/fu3.jpeg" alt="fu3" class="imageChange2">
                     </div>
                     <div class="thongtin">
                         <p>Máy ảnh Fujifilm XT-5 (XT-5 MỚI, CHÍNH HẢNG)</p>
@@ -106,7 +134,7 @@
                 <!--khung4-->
                 <div class="khunganh1">
                     <div class ="fu">
-                        <img src="fu4.jpeg" alt="fu4" class="imageChange2">
+                        <img src=".//fujifilm/fu4.jpeg" alt="fu4" class="imageChange2">
                     </div>
                     <div class="thongtin">
                         <p>Máy ảnh Fujifilm X-H2 Cũ-Mới</p>
@@ -119,7 +147,7 @@
                 <!--khung5-->
                 <div class="khunganh1">
                     <div class ="fu">
-                        <img src="fu5.jpeg" alt="fu5" class="imageChange2">
+                        <img src=".//fujifilm/fu5.jpeg" alt="fu5" class="imageChange2">
                     </div>
                     <div class="thongtin">
                         <p>Máy ảnh Mirrorless Fujifilm X-H2S Mới (XH2S)</p>
@@ -132,7 +160,7 @@
                 <!--khung6-->
                 <div class="khunganh1">
                     <div class ="fu">
-                        <img src="fu6.jpeg" alt="fu6" class="imageChange2">
+                        <img src=".//fujifilm/fu6.jpeg" alt="fu6" class="imageChange2">
                     </div>
                     <div class="thongtin">
                         <p>Máy ảnh Fujifilm X-E2S (Body) Cũ giá tốt</p>
@@ -152,7 +180,7 @@
             <div class="khunganh">
                 <div class="khunganh1">
                     <div class ="fu">
-                        <img src="s1.jpeg" alt="so1" class="imageChange2">
+                        <img src=".//sony/s1.jpeg" alt="so1" class="imageChange2">
                     </div>
                     <div class="thongtin">
                         <p>Máy ảnh Sony Cine Line FX30 (FX30 - Mới chính hãng)      </p>
@@ -165,7 +193,7 @@
                 <!--khung2-->
                 <div class="khunganh1">
                     <div class ="fu">
-                        <img src="s2.jpg" alt="so2" class="imageChange2">
+                        <img src=".//sony/s2.jpg" alt="so2" class="imageChange2">
                     </div>
                     <div class="thongtin">
                         <p>Máy ảnh Sony A9 Mark II (A9 II - Cũ,đẹp)</p>
@@ -178,7 +206,7 @@
                 <!--khung3-->
                 <div class="khunganh1">
                     <div class ="fu">
-                        <img src="s3.jpeg" alt="so3" class="imageChange2">
+                        <img src=".//sony/s3.jpeg" alt="so3" class="imageChange2">
                     </div>
                     <div class="thongtin">
                         <p>Máy ảnh Sony A7C mark II (A7CII – Mới, Chính hãng)</p>
@@ -191,7 +219,7 @@
                 <!--khung4-->
                 <div class="khunganh1">
                     <div class ="fu">
-                        <img src="s4.jpeg" alt="so4" class="imageChange2">
+                        <img src=".//sony/s4.jpeg" alt="so4" class="imageChange2">
                     </div>
                     <div class="thongtin">
                         <p>Máy ảnh Sony A7S mark III (Cũ – Đẹp)</p>
@@ -204,7 +232,7 @@
                 <!--khung5-->
                 <div class="khunganh1">
                     <div class ="fu">
-                        <img src="s5.jpeg" alt="so5" class="imageChange2">
+                        <img src=".//sony/s5.jpeg" alt="so5" class="imageChange2">
                     </div>
                     <div class="thongtin">
                         <p>Máy ảnh Sony A7R mark V (CŨ, ĐẸP)</p>
@@ -217,7 +245,7 @@
                 <!--khung6-->
                 <div class="khunganh1">
                     <div class ="fu">
-                        <img src="s6.jpeg" alt="so6" class="imageChange2">
+                        <img src=".//sony/s6.jpeg" alt="so6" class="imageChange2">
                     </div>
                     <div class="thongtin">
                         <p>Máy ảnh Mirrorless Sony A6700 (A6700 – Chính hãng)</p>
@@ -237,7 +265,7 @@
             <div class="khunganh">
                 <div class="khunganh1">
                     <div class ="fu">
-                        <img src="c1.jpeg" alt="ca1" class="imageChange2">
+                        <img src=".//DSRL-canon/c1.jpeg" alt="ca1" class="imageChange2">
                     </div>
                     <div class="thongtin">
                         <p>Máy ảnh DSLR Canon EOS-1D X Mark III Cũ Đẹp</p>
@@ -250,7 +278,7 @@
                 <!--khung2-->
                 <div class="khunganh1">
                     <div class ="fu">
-                        <img src="c2.jpg" alt="ca2" class="imageChange2">
+                        <img src=".//DSRL-canon/c2.jpg" alt="ca2" class="imageChange2">
                     </div>
                     <div class="thongtin">
                         <p>Máy ảnh Canon DSLR EOS 100D kèm lens 40mm f/2.8 STM (trắng)</p>
@@ -263,7 +291,7 @@
                 <!--khung3-->
                 <div class="khunganh1">
                     <div class ="fu">
-                        <img src="c3.jpeg" alt="ca3" class="imageChange2">
+                        <img src=".//DSRL-canon/c3.jpeg" alt="ca3" class="imageChange2">
                     </div>
                     <div class="thongtin">
                         <p>Máy ảnh Canon EOS 4000D + 18-55mm F3.5-5.6 III</p>
@@ -276,7 +304,7 @@
                 <!--khung4-->
                 <div class="khunganh1">
                     <div class ="fu">
-                        <img src="c4.jpeg" alt="ca4" class="imageChange2">
+                        <img src=".//DSRL-canon/c4.jpeg" alt="ca4" class="imageChange2">
                     </div>
                     <div class="thongtin">
                         <p>Máy ảnh Canon EOS 850D + 18 55 stm cũ – mới</p>
@@ -289,7 +317,7 @@
                 <!--khung5-->
                 <div class="khunganh1">
                     <div class ="fu">
-                        <img src="c5.png" alt="ca5" class="imageChange2">
+                        <img src=".//DSRL-canon/c5.png" alt="ca5" class="imageChange2">
                     </div>
                     <div class="thongtin">
                         <p>Máy ảnh Canon EOS 1500D + kit 18-55</p>
@@ -302,7 +330,7 @@
                 <!--khung6-->
                 <div class="khunganh1">
                     <div class ="fu">
-                        <img src="c6.jpg" alt="ca6" class="imageChange2">
+                        <img src=".//DSRL-canon/c6.jpg" alt="ca6" class="imageChange2">
                     </div>
                     <div class="thongtin">
                         <p>Máy ảnh Canon EOS 90D (Body Only)</p>
@@ -323,7 +351,7 @@
             <div class="khunganh">
                 <div class="khunganh1">
                     <div class ="fu">
-                        <img src="n1.jpeg" alt="ni1" class="imageChange2">
+                        <img src=".//DSLR-NIkon/n1.jpeg" alt="ni1" class="imageChange2">
                     </div>
                     <div class="thongtin">
                         <p>Máy ảnh DSLR Nikon D6 (Body – Đẹp)</p>
@@ -336,7 +364,7 @@
                 <!--khung2-->
                 <div class="khunganh1">
                     <div class ="fu">
-                        <img src="n2.jpeg" alt="ni2" class="imageChange2">
+                        <img src=".//DSLR-NIkon/n2.jpeg" alt="ni2" class="imageChange2">
                     </div>
                     <div class="thongtin">
                         <p>Máy ảnh Nikon D600 Cũ Giá Tốt</p>
@@ -349,7 +377,7 @@
                 <!--khung3-->
                 <div class="khunganh1">
                     <div class ="fu">
-                        <img src="n3.jpeg" alt="ni3" class="imageChange2">
+                        <img src=".//DSLR-NIkon/n3.jpeg" alt="ni3" class="imageChange2">
                     </div>
                     <div class="thongtin">
                         <p>Máy ảnh Nikon Z9 Mới Giá Tốt</p>
@@ -362,7 +390,7 @@
                 <!--khung4-->
                 <div class="khunganh1">
                     <div class ="fu">
-                        <img src="n4.jpg" alt="ni4" class="imageChange2">
+                        <img src=".//DSLR-NIkon/n4.jpg" alt="ni4" class="imageChange2">
                     </div>
                     <div class="thongtin">
                         <p>MÁY ẢNH NIKON D5 HÀNG CŨ</p>
@@ -375,7 +403,7 @@
                 <!--khung5-->
                 <div class="khunganh1">
                     <div class ="fu">
-                        <img src="n5.jpg" alt="ni5" class="imageChange2">
+                        <img src=".//DSLR-NIkon/n5.jpg" alt="ni5" class="imageChange2">
                     </div>
                     <div class="thongtin">
                         <p>MÁY ẢNH KỸ THUẬT SỐ NIKON DSLR D780</p>
@@ -388,7 +416,7 @@
                 <!--khung6-->
                 <div class="khunganh1">
                     <div class ="fu">
-                        <img src="n6.jpg" alt="ni6" class="imageChange2">
+                        <img src=".//DSLR-NIkon/n6.jpg" alt="ni6" class="imageChange2">
                     </div>
                     <div class="thongtin">
                         <p>MÁY ẢNH DSLR NIKON D2X HÀNG CŨ</p>
@@ -405,12 +433,12 @@
         <div class="end1">
             <div class="k1 k2">
                 <div class ="d1"><b>Liên hệ</b></div>
-                <div>Địa chỉ: 1025/27A Cách Mạng Tháng Tám, Phường 7, Tân Bình, Hồ Chí Minh</div>
+                <div>Địa chỉ: 1025/27A Đường abcxyz, Phường 1, Gò Vấp, Hồ Chí Minh</div>
                 <hr class="hr">
                 <div ><b style="color:white;">Fanpage:</b></div>
                 <ul><li style="font-size: 17px;"><a class="hoverk1" href="https://www.facebook.com/mayanhxachtaynhatban/"> https://www.facebook.com/mayanhxachtaynhatban/</a></li></ul  >
                 <hr class="hr">
-                <div ><b style="color:white;">Hotline: 0909860910</b></div>
+                <div ><b style="color:white;">Hotline: 0123456789</b></div>
             </div>
             <div class="k1">
                 <div class="d1"><b>Thông Tin</b></div>
@@ -434,7 +462,7 @@
             </div>
         </div>
         <div class="end2">
-            <p>Copyright@2024.<p class="p1"> Maytinhxachtaynhat.com</p><span style="display:flex ;align-items: center;margin-left:3px;margin-right:3px">|</span> <p class="p1">mayanhhoangto.com </p></p>
+            <p>Copyright@2024.<p class="p1"> Mayanhxachtay.com</p><span style="display:flex ;align-items: center;margin-left:3px;margin-right:3px">|</span> <p class="p1">mayanhtiendat.com </p></p>
         </div>
     </div>
 </body>
